# xkblas

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  BUGLIST  CMakeLists.txt  Dockerfile  ETAT  Makefile  README.md  gen_internal_register.sh  gen_precision.sh  gen_precision_one.sh  grunch.lip  kaapi.h  kaapi_atomic.h  kaapi_barrier.c  kaapi_dbg.c  kaapi_error.h  kaapi_format.c  kaapi_format.h  kaapi_hashmap.c  kaapi_hashmap.h  kaapi_impl.c  kaapi_impl.h  kaapi_ld.c  kaapi_memory.c  kaapi_memory.h  kaapi_offload.c  kaapi_offload.h  kaapi_offload_dbg.h  kaapi_offload_device.c  kaapi_offload_stream.c  kaapi_offload_stream.h  kaapi_plugin.h  kaapi_plugin_cuda.c  kaapi_plugin_hip.c  kaapi_plugin_host.c  kaapi_rt.c  kaapi_task.c  (+4 more)
blas/: CMakeLists.txt  common.gen  common.h  dbg_blas.c  flops.h  libxkblas_wrapper.c  libxkblas_wrapper.h  libxkblas_wrapper_z.c  task_format.h  task_z.h  task_z_internal.h  task_zgemm.c  task_zgemmt.c  task_zhemm.c  task_zher2k.c  task_zherk.c  task_zpotrf.c  task_zswap.c  task_zsymm.c  task_zsyr2k.c  task_zsyrk.c  task_ztrmm.c  task_ztrsm.c  xkblas.c  xkblas.h  xkblas_f77.h  xkblas_f77_z.h  xkblas_z.h  zcopyscale.c  zcopyscale.cu  zgemm.c  zgemmt.c  zgetrf_incpiv.c  zgetrf_nopiv.c  zhemm.c  zher2k.c  zherk.c  zlibxkblas_wrapper.c  zpotrf.c  zscaling.c  (+24 more)
kaapi/: CMakeLists.txt  kaapi.h  kaapi_atomic.h  kaapi_barrier.c  kaapi_dbg.c  kaapi_dependences_cartesian2D.hpp  kaapi_error.h  kaapi_format.c  kaapi_format.h  kaapi_hashmap.h  kaapi_impl.c  kaapi_impl.h  kaapi_ld.c  kaapi_memory.c  kaapi_memory.h  kaapi_offload.c  kaapi_offload.h  kaapi_offload_datatype.h  kaapi_offload_dbg.h  kaapi_offload_device.c  kaapi_offload_stream.c  kaapi_offload_stream.h  kaapi_perfctr.h  kaapi_plugin.h  kaapi_plugin_cuda.c  kaapi_plugin_hip.c  kaapi_plugin_host.c  kaapi_rt.c  kaapi_task.c  kaapi_task_dependences.cc  kaapi_task_dependences.h  kaapi_task_dependences.hpp  kaapi_trace.h  kaapi_trace_lib.c  kaapi_trace_parser.c  kaapi_trace_recorder.c  kaapi_trace_recorder.h  kaapi_trace_util.h
kaapi/regionaccesstree/: .gitignore  PROBLEM  README.md
kaapi/regionaccesstree/src/: access.hpp  region.hpp  utils.hpp
kaapi/regionaccesstree/tests/: demangle.hpp  task-access-interval-multi-tree.hpp  task.hpp  tests.cpp
projects/kaapi/: CMakeLists.txt  README.md
projects/kaapi/cmake/: FindCUBLAS.cmake
projects/kaapi/scripts/: hipify-perl
projects/kaapi/src/: memory-coherent.cc  memory-invalidate.cc  memory-register.cc  runtime-task-submit.cc  runtime.cc
projects/kaapi/tests/: CMakeLists.txt  kaapi-deinit.cc  kaapi-init.cc  kaapi-sync.cc  kaapi-task-format-host.cc  kaapi-task-format.cc
projects/logger/: CMakeLists.txt  README.md
projects/logger/include/: logger.h
projects/ptr/: CMakeLists.txt
projects/ptr/cmake/: FindHWLOC.cmake
projects/ptr/src/: callback.h  memory-alloc.cc  memory-coherent.cc  memory-invalidate.cc  memory-register.cc  runtime-task-submit.cc  runtime.cc  runtime.h
projects/ptr/tests/: CMakeLists.txt  memtree.cc
projects/xkblas/: AUTHORS  CMakeLists.txt  README.md
projects/xkblas/include/: matrix-tile.h  xkblas-kernel-type.h  xkblas-kernel.h  xkblas.h  zkernel.h
projects/xkblas/src/: auto-tile.cc  auto-tile.h  conf.cc  conf.h  context.cc  context.h  legacy.cc  memory-alloc.cc  memory-coherent.cc  memory-invalidate.cc  memory-preallocate.cc  memory-register.cc  memory-replicate.cc  xkblas.cc
projects/xkblas/tests/: CMakeLists.txt  tests.cc
projects/xkbm/: .gitignore  CMakeLists.txt  README.md
projects/xkbm/src/: allocator.cc  benchmark.cc  main.cc  pp.cc  threads.cc
projects/xkdnn/: CMakeLists.txt
projects/xkdnn/src/: cudnn.cc
projects/xkdnn/tests/: CMakeLists.txt
projects/xkomp/: CMakeLists.txt  README.md  version.map
projects/xkomp/src/: api.cc  barrier.cc  env.cc  for.cc  fork.cc  libomptarget.cc  single.cc  target.cc  task.cc
projects/xkomp/tests/: CMakeLists.txt  parallel-for.cc  parallel.cc  target.cc  task-dep.cc  task.cc
projects/xkrt/: .gitlab-ci.yml  CMakeLists.txt  README.md
projects/xkrt/docs/: Doxyfile.bak
projects/xkrt/scripts/: hipify-perl
projects/xkrt/src/: cairo.cc  driver.cc  host-thread.cc  memory-coherent.cc  memory-copy.cc  memory-distribute.cc  memory-invalidate.cc  memory-register.cc  memory-replicate.cc  memory.cc  power.cc  runtime-sched.cc  runtime-task-submit.cc  runtime.cc  sched.cc  stats.cc  task.cc
projects/xkrt/tests/: CMakeLists.txt  deinit.cc  fib-task-capture.cc  fib-task-format.cc  fib.cc  init.cc  kaapi-init.cc  kaapi-sync.cc  kaapi-task-format-host.cc  kaapi-task-format.cc  memory-register-async-legacy-memcpy-split.cc  memory-register-async-legacy.cc  memory-register-async.cc  memory-register-async.conf.cc  memory-touch-async.cc  memory-transfer-async.cc  sync.cc  (+23 more)
projects/xkrt_deprecated/: CMakeLists.txt
projects/xksmi/: CMakeLists.txt  README.md  cmd
testing/: CMakeLists.txt  internal_register.h  run_tests  testing_zauxiliary.c  testing_zauxiliary.h  testing_zgemm.c  testing_zhemm.c  testing_zher2k.c  testing_zherk.c  testing_zsymm.c  testing_zsyr2k.c  testing_zsyrk.c  testing_ztrmm.c  testing_ztrsm.c  zplghe.c  zplgsy.c  ztesting_auxiliary.c  ztesting_auxiliary.h  ztesting_copyscale.c  ztesting_gemm.c  ztesting_hemm.c  ztesting_her2k.c  ztesting_herk.c  ztesting_mumps_like.c  ztesting_scaling.c  ztesting_symm.c  ztesting_syr2k.c  ztesting_syrk.c  ztesting_trmm.c  ztesting_trsm.c
tests/: CMakeLists.txt  axpy.c  fill.c  tests.c  tests.cc
tests/kernels/: CMakeLists.txt
v2/: .clang-format  CMakeLists.txt  README.md  TODO
v2/include/: .gitignore  README.md  blas.h  flops.h  kernel.h  matrix-tile.h  xkblas-cblas.h  xkblas-dkernel.h  xkblas-kernel-type.h  xkblas-version.h  xkblas-version.py  xkblas-zkernel.h  xkblas.h
v2/src/: memory-alloc.cc  memory-coherent-async.cc  memory-coherent.cc  memory-invalidate.cc  memory-register.cc  xkblas-callback.h  xkblas-context-memory-coherent-async.cc  xkblas-context-task-submit.cc  xkblas-context.cc  xkblas-context.h  xkblas-legacy.cc  xkblas.cc  xkblas_conf.cc  xkblas_conf.h
v2/tests/: CMakeLists.txt  gemm.cc  main.cc  memtree.cc
(+924 files in other folders)
